deploy/manifests/app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-one
  template:
    metadata:
      labels:
        app: ingress-one
    spec:
      containers:
      - name: ingress-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-one
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ingress-one
