deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ingress-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ingress-one
            port:
              number: 80
      - path: /ingress-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ingress-two
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ingress-one
            port:
              number: 80
